--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <a href="#hobbies" class="nav-link">Hobbies</a>
             <a href="#theme" class="nav-link">Theme</a>
             <a href="#social-media" class="nav-link">Social Media</a>
+            <a href="#feedback" class="nav-link">Feedback</a>
         </div>
 
         <!-- Slider button for toggling themes -->
@@ -38,14 +39,14 @@
     </div>
 
     <div title="Introduction" id="introduction">
-        <h2>~~~ Introduction ~~~</h2>
+        <h2>Introduction</h2>
         <h3>Hi everyone!</h3>
         <h3>I am Hong Kai :D</h3>
         <h3>My major is Computer Science and I will be graduating in 2027!</h3>
     </div>
 
     <div title="About Me" id="about-me">
-        <h2>~~~ About Me ~~~</h2>
+        <h2>About Me</h2>
         <h3>Name</h3>
         <h4>Koh Hong Kai</h4>
         <h3>Age</h3>
@@ -57,25 +58,25 @@
     </div>
   
     <div title="Hobbies" id="hobbies">
-        <h2>~~~ Hobbies ~~~</h2>
+        <h2>Hobbies</h2>
         <ul class="hobbies-list">
             <li class="hobby-panel gaming">Gaming</li>
             <li class="hobby-panel hiking">Hiking</li>
-            <li class="hobby-panel drinking">Drinking</li>
-            <li class="hobby-panel eating">Eating</li>
+            <li class="hobby-panel skiing">Skiing</li>
+            <li class="hobby-panel kayaking">Kayaking</li>
         </ul>
     </div>
 
     <div title="Theme" id="theme">
-        <h2>~~~ Theme ~~~</h2>
+        <h2>Theme</h2>
         <h3>The theme for this webpage is Harmony / Discord. 
         <h3>So I have created a toggle switch that allows the switching of the page between Harmony mode and Discord mode!</h3>
-        <h3>When in Harmony mode, the page looks nice.</h3>
-        <h3>But when in Discord mode, everything looks bad!</h3>
+        <h3>When in Harmony mode, the page looks nice. Everything can be seen clearly.</h3>
+        <h3>But when in Discord mode, everything looks bad! The words are unreadable!</h3>
     </div>
 
     <div title="Social Media" class="social-media-container" id="social-media">
-        <h2>~~~ My Social Media ~~~</h2>
+        <h2>Social Media</h2>
         <div class="social-buttons">
             <button class="social-button" onclick="window.location.href='https://www.instagram.com/h0nk.ka1/'">
                 <img src="logos/instagram-logo.png" alt="Instagram Logo" class="social-logo">Instagram
@@ -90,6 +91,25 @@
                 <img src="logos/github-logo.png" alt="GitHub Logo" class="social-logo">GitHub
             </button>
         </div>
+    </div>
+
+    <div id="feedback" class="feedback-container">
+        <h2>Feedback</h2>
+        <form action="submit_feedback.php" method="POST" class="feedback-form">
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" placeholder="Your name" required>
+
+            <label for="email">Email:</label>
+            <input type="text" id="email" name="email" placeholder="Your email" required>
+
+            <label for="message">Message:</label>
+            <textarea id="message" rows="10" cols="50" placeholder="Your feedback..." required></textarea>
+
+            <!-- Changed Submit Button to YouTube Link -->
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
+                <button type="button">Submit</button>
+            </a>
+        </form>
     </div>
 
     <footer>
@@ -135,6 +155,7 @@
                 });
             });
         });
+
     </script>
 </body>
 </html>
