--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 
         <!--- Navigation Links -->
         <div class="nav-links">
-            <a href="#home" class="nav-link">Home</a>
             <a href="#introduction" class="nav-link">Introduction</a>
             <a href="#about-me" class="nav-link">About Me</a>
             <a href="#hobbies" class="nav-link">Hobbies</a>
@@ -32,15 +31,9 @@
     </div>
 
     <!--- Main Content Sections -->
-    <div id="home">
-        <div class="container">
-            <h1>Welcome to my website!</h1>       
-        </div>
-    </div>
 
     <div title="Introduction" id="introduction">
-        <h2>Introduction</h2>
-        <h3>Hi everyone!</h3>
+        <h3><br><br>Hi everyone!</h3>
         <h3>I am Hong Kai :D</h3>
         <h3>My major is Computer Science and I will be graduating in 2027!</h3>
     </div>
@@ -78,18 +71,22 @@
     <div title="Social Media" class="social-media-container" id="social-media">
         <h2>Social Media</h2>
         <div class="social-buttons">
-            <button class="social-button" onclick="window.location.href='https://www.instagram.com/h0nk.ka1/'">
-                <img src="logos/instagram-logo.png" alt="Instagram Logo" class="social-logo">Instagram
-            </button>
-            <button class="social-button" onclick="window.location.href='https://www.facebook.com/daniel.drinkbeer.9/'">
-                <img src="logos/facebook-logo.png" alt="Facebook Logo" class="social-logo">Facebook
-            </button>
-            <button class="social-button" onclick="window.location.href='https://www.linkedin.com/in/hong-kai-koh-bb3b55237/'">
-                <img src="logos/linkedin-logo.png" alt="LinkedIn Logo" class="social-logo">LinkedIn
-            </button>
-            <button class="social-button" onclick="window.location.href='https://github.com/DanielDrinkbeer'">
-                <img src="logos/github-logo.png" alt="GitHub Logo" class="social-logo">GitHub
-            </button>
+            <a href="https://www.instagram.com/h0nk.ka1/" class="social-button instagram" target="_blank">
+                <img src="logos/instagram-logo.png" alt="Instagram Logo" class="social-logo">
+                <span class="button-text">Instagram</span>
+            </a>
+            <a href="https://www.facebook.com/daniel.drinkbeer.9/" class="social-button facebook" target="_blank">
+                <img src="logos/facebook-logo.png" alt="Facebook Logo" class="social-logo">
+                <span class="button-text">Facebook</span>
+            </a>
+            <a href="https://www.linkedin.com/in/hong-kai-koh-bb3b55237/" class="social-button linkedin" target="_blank">
+                <img src="logos/linkedin-logo.png" alt="LinkedIn Logo" class="social-logo">
+                <span class="button-text">LinkedIn</span>
+            </a>
+            <a href="https://github.com/DanielDrinkbeer" class="social-button github" target="_blank">
+                <img src="logos/github-logo.png" alt="GitHub Logo" class="social-logo">
+                <span class="button-text">GitHub</span>
+            </a>
         </div>
     </div>
 
